minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          command:
            - /bin/sh
            - -c
            - minio server /data --console-address ":9001"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - mountPath: /data
              name: minio-data
      volumes:
        - name: minio-data
          hostPath:
            path: /opt/motion/minio-data
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: default
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
