motion-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: motion-backend
  namespace: default
spec:
  selector:
    app: motion-backend # ※注釈参照
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
